[gd_scene load_steps=4 format=3 uid="uid://os6t8vie50h5"]

[ext_resource type="FontFile" uid="uid://bq3erw8t7s7ek" path="res://_assets/fonts/Jacquard_12/Jacquard12-Regular.ttf" id="1_glk6x"]
[ext_resource type="Script" uid="uid://b0dfdxgo225hw" path="res://src/scripts/ui/pause_menu.gd" id="1_x5dnn"]

[sub_resource type="LabelSettings" id="LabelSettings_x5dnn"]
font = ExtResource("1_glk6x")
font_size = 72
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_x5dnn")

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/separation = 72

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
text = "Pausa"
label_settings = SubResource("LabelSettings_x5dnn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContinue" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_glk6x")
theme_override_font_sizes/font_size = 72
text = "Continuar"

[node name="ButtonExit" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_glk6x")
theme_override_font_sizes/font_size = 72
text = "Salir"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/BoxContainer/VBoxContainer/ButtonContinue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/BoxContainer/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
